# ARCCnet

./: .codespellrc  .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.rst  LICENSE.rst  MANIFEST.in  README.md  README.rst  SDOprocessing.py  drmspipeline.py  pipelinetest.py  pyproject.toml  pytest.ini  ruff.toml  setup.cfg  tox.ini
.github/workflows/: ci.yml
arccnet/: __init__.py  example_mod.py  version.py
arccnet/catalogs/: __init__.py  base_catalog.py  srs_processed_catalog.parq  utils.py
arccnet/catalogs/active_regions/: __init__.py  swpc.py
arccnet/catalogs/active_regions/tests/: test_swpc.py
arccnet/catalogs/active_regions/tests/data/: 20220104SRS.txt  20220105SRS.txt  20220106SRS.txt
arccnet/catalogs/flares/: common.py  hek.py  helio.py
arccnet/catalogs/flares/tests/: test_hek.py  test_helio.py
arccnet/catalogs/flares/tests/data/: hec_gevloc_20120101-20120103.ecsv  hec_goes_20120101-20120103.ecsv  hek_ssw_latest_20120101-20120103.ecsv  hek_swpc_20120101-20120103.ecsv
arccnet/cli/: __init__.py  main.py
arccnet/cli/tests/: test_main.py
arccnet/data_generation/: README.rst  data_manager.py  mag_processing.py  region_detection.py
arccnet/data_generation/catalogs/: base_catalog.py
arccnet/data_generation/catalogs/active_region_catalogs/: swpc.py
arccnet/data_generation/catalogs/active_region_catalogs/tests/: test_swpc.py
arccnet/data_generation/catalogs/active_region_catalogs/tests/data/: 19961209SRS.txt
arccnet/data_generation/magnetograms/: base_magnetogram.py  utils.py
arccnet/data_generation/magnetograms/instruments/: __init__.py  hmi.py  mdi.py
arccnet/data_generation/magnetograms/tests/: test_basemag_children.py  test_mag_base.py
arccnet/data_generation/tests/: test_data_manager.py  test_mag_processing.py  test_region_detection.py  test_sdo_processing.py
arccnet/data_generation/tests/data/: ts_test_data.ecsv  ts_test_data.parq
arccnet/data_generation/timeseries/: SDOprocessing.py  drms_pipeline.py  drmspipeline.py  pipelinetest.py  sdo_processing.py
arccnet/data_generation/utils/: data_logger.py  default_variables.py  utils.py
arccnet/data_generation/utils/tests/: test_utils.py
arccnet/models/: CHECKPOINT_SYSTEM.md  checkpoint_manager.py  dataset_utils.py  labels.py  train_utils.py  utilities.py
arccnet/models/cutouts/: __init__.py  config.py  inference.py  readme.txt  train.py
arccnet/models/cutouts/hale/: README.md  config.py  cross_validation.py  data_preparation.py  dataset.py  dataset_eda_visualization.py  evaluation.py  inference.py  lightning_data.py  lightning_model.py  logging_utils.py  test_setup.py  train.py  trainer.py  verify_setup.py
arccnet/models/cutouts/hale/old/: train.py
arccnet/models/cutouts/mcintosh/: __init__.py  config.py  dataset_utils.py  mcinstosh.py  mcintosh.py  models.py  train_utils.py
arccnet/models/cutouts/mount_wilson/: config.py  debug.py
arccnet/models/cutouts_from_fulldisk/: config.py  cutouts_from_fulldisk_train.ipynb  make_cutouts_from_fulldisk.py  train.ipynb  train.py
arccnet/models/flares/: PREPROCESSING.md  binary_classification.py  binary_flare_train.py  preprocessing.py  train_binary_classification.py  utils.py
arccnet/models/flares/binary_classification/: config.py  dataset.py  example_configs.py  lighning_modules.py  model.py  prefilter_fits_report.py  train.py
arccnet/models/flares/multiclass/: config.py  model.py  test_activation_replacement.py  test_focal_loss.py  test_preprocessing.py  train.py
arccnet/models/fulldisk/: make_cutouts_from_fulldisk.py  train.ipynb  train_fulldisk.py  utils.py
arccnet/models/fulldisk/YOLO/: config.yaml  make_yolo_dataset.py  train_yolo.py  utilities.py  yolo_labels_visualization.ipynb
arccnet/models/fulldisk/fasterrcnn/: inference.py  preprocess_fulldisks.py  train_fulldisk.py  train_pl.py  utils.py
arccnet/models/fulldisk/yolo/: config.yaml  dataset_config.py  make_yolo_dataset.py  train_yolo.py  verify_labels.py  yolo_labels_visualization.py  yolo_utils.py
arccnet/models/tests/: test_utils.py
arccnet/notebooks/analysis/: EDA_cutouts.py  EDA_flares.py  EDA_flares_utils.py  EDA_fulldisk.py
arccnet/pipeline/: main.py
arccnet/pipeline/tests/: test_process_srs.py
arccnet/tests/data_generation/catalogs/active_region_catalogs/: test_swpc.py
arccnet/tests/data_generation/catalogs/active_region_catalogs/data/: 20100228SRS.txt
arccnet/tests/data_generation/magnetograms/: test_mag_utils.py
arccnet/tests/data_generation/utils/: test_utils.py
arccnet/utils/: arccnetrc  config.py  logging.py
arccnet/visualisation/: EDA_cutouts.ipynb  EDA_cutouts.py  EDA_flares.py  EDA_flares_utils.py  EDA_fulldisk.ipynb  EDA_fulldisk.py  EDA_utils.py  data.py  inference_FD.ipynb  inference_cutouts.ipynb  utils.py
docker/: docker-compose.yaml  local_dev.Dockerfile
docs/: conf.py  index.rst
docs/_static/: custom.css
docs/how_to/: index.rst
docs/reference/: arccnet.rst  catalogs.rst  data_generation.rst  index.rst  models.rst  pipeline.rst  utils.rst  visualisation.rst
docs/reports/: arcnet-dataset-mag.md  arcnet-dataset.md  refs.bib
docs/topic/: index.rst
docs/tutorial/: index.rst
