[build-system]

requires = ["setuptools",
            "setuptools_scm[toml]",
            "wheel"]

build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]
write_to = "arccnet/_version.py"

[tool.ruff]
target-version = "py39"
line-length = 120
exclude=[
    ".git,",
    "__pycache__",
    "build",
    "arccnet/version.py",
]

select = [
       "E",
       "F",
       "W",
       "UP",
       "PT"
]

extend-ignore = [
    # pycodestyle (E, W)
    "E501",  # LineTooLong                             # TODO! fix

    # pytest (PT)
    "PT001",  # Always use pytest.fixture()
    "PT004",  # Fixtures which don't return anything should have leading _
    "PT007",  # Parametrize should be lists of tuples  # TODO! fix
    "PT011",  # Too broad exception assert             # TODO! fix
    "PT023",  # Always use () on pytest decorators
]

[tool.ruff.flake8-tidy-imports]
[tool.ruff.flake8-tidy-imports.banned-api]
"warnings.warn".msg = "Use sunpy specific warning helpers warn_* from sunpy.utils.exceptions"

[tool.ruff.per-file-ignores]
# Part of configuration, not a package.
"setup.py" = ["INP001"]
"conftest.py" = ["INP001"]
# implicit-namespace-package. The examples are not a package.
"docs/*.py" = ["INP001"]

"__init__.py" = ["E402", "F401", "F403"]
"test_*.py" = ["B011", "D", "E402", "PGH001", "S101"]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
(
  /(
    \.eggs
    | \.git
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
    | docs
    | \.history
  )/
  | docs/conf.py
)
'''
