[metadata]
name = ARCCnet
provides = arccnet
author = ARCAFF Team
author_email =
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = https://arcaff.eu
description = Active Region Cutout Classification Network
long_description = file: README.rst
long_description_content_type = text/x-rst
github_project = arcaff/arccnet
platform = any
keywords = solar physics, solar, science, machine learning, space weather
classifiers =
  Development Status :: 1 - Planning
  Intended Audience :: Science/Research
  License :: OSI Approved :: BSD License
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Topic :: Scientific/Engineering :: Physics

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >=3.9
setup_requires = setuptools_scm
install_requires =
    sunpy[all] >= 5.0 # read_srs has been updated at 5.0
    platformdirs
    pyarrow
    scikit-learn


[options.entry_points]
console_scripts =
    arccnet = arccnet.cli.main:main

[options.extras_require]
test =
    pytest
    pytest-doctestplus
    pytest-cov
    pytest-mock
    pytest-remotedata
docs =
    sphinx
    sphinx-automodapi
    pydata_sphinx_theme
    sphinxcontrib-bibtex
    myst_nb
    linkify-it-py
dev =
    black
    docker
    drms>=0.6.4 # 0.6.3 introduces an error in pandas for `MISSING` values. See: https://github.com/sunpy/drms/issues/98
    flake8
    isort>=4.3.21, <5.0
    pipdeptree
    pre-commit
    protobuf
    scikit-learn
models =
    # install torch following https://pytorch.org/get-started/locally/
    timm
    comet_ml

all =
    %(test)s
    %(docs)s
    %(dev)s
    %(models)s

[tool:pytest]
testpaths = "arccnet" "docs"
norecursedirs = ".tox" "build" "docs[\/]_build" "docs[\/]generated" "*.egg-info" "examples" "sunkit_image[/\]_dev" ".jupyter" ".history" "tools"
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst
remote_data_strict = True

[coverage:run]
omit =
  arccnet/__init*
  arccnet/conftest.py
  arccnet/*setup_package*
  arccnet/tests/*
  arccnet/*/tests/*
  arccnet/extern/*
  arccnet/version*
  */arccnet/__init*
  */arccnet/conftest.py
  */arccnet/*setup_package*
  */arccnet/tests/*
  */arccnet/*/tests/*
  */arccnet/extern/*
  */arccnet/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_

[pycodestyle]
max_line_length = 110

[flake8]
max-line-length = 110
exclude =
    .git,
    __pycache__,
    docs/conf.py,
    build
rst-directives =
    plot

[isort]
balanced_wrapping = True
skip=docs/conf.py,arccnet/__init__.py
default_section = THIRDPARTY
include_trailing_comma = True
known_astropy = astropy
known_first_party = arccnet
length_sort = False
length_sort_sections = stdlib
line_length = 110
multi_line_output = 3
no_lines_before = LOCALFOLDER
sections = FUTURE, STDLIB, THIRDPARTY, ASTROPY, FIRSTPARTY, LOCALFOLDER

[codespell]
skip = *.asdf,*.fits,*.fts,*.header,*.json,*.xsh,*cache*,*egg*,*extern*,.git,.idea,.tox,_build,*truncated,*.svg
ignore-words-list =
    alog,
    nd,
    nin,
    observ,
    ot,
    te,
    upto,
    fro,
    hax
